Fixed selector appearing behind the media and not being accessible

--- a/src/styles/content/listing.scss
+++ b/src/styles/content/listing.scss
@@ -203,6 +203,7 @@
     position: absolute;
     top: 5px;
     left: 5px;
+    z-index: 1;
   }
 
   &.shown {
